--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,28 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
+
+.my-boardDetail-header {
+    display: grid;
+    grid-template-columns: 8fr 2fr;
+}
+
+.my-boardDetail-header-sector1-grid {
+    display: grid;
+    grid-template-columns: 1.9fr 6fr;
+}
+
+.my-borderDetail-color-left {
+    border-left: 1px solid;
+    border-color: rgba(52, 152, 219, 1);
+}
+
+.my-borderDetail-color-top {
+    border-top: 1px solid;
+    border-color: rgba(52, 152, 219, 1);
+}
+
+.no_under_line_link {
+    text-decoration: none;
+    color: black;
+}
